# polyalign

./: .gitignore  .polyalign-progress.json  CHANGELOG.md  CITATION.cff  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: banned-phrases.txt  dependabot.yml
.github/workflows/: audit.yml  ci.yml
audits/: v0.1.0a1_A_verdict.json  v0.1.0a1_B_verdict.json  v0.1.0a1_C_verdict.json
datasets/: ground_truth_v0.1.0a1.jsonl
docs/: CLAIM.md  architecture.d2
results/: v0.1.0a1_ablation.json
scripts/: gen_ground_truth.py  render_readme.py  run_ablation.py  verify_step.py
src/polyalign/: __init__.py  _types.py  _version.py  cli.py  matryoshka.py
src/polyalign/alignment/: __init__.py  pairwise.py  sinkhorn.py
src/polyalign/backends/: __init__.py  gavagai_bridge.py
src/polyalign/calibration/: __init__.py  ece.py  pava.py
src/polyalign/conformal/: __init__.py  otcp.py
src/polyalign/polytope/: __init__.py  pareto.py  vertices.py
tests/: conftest.py  test_ablation_runner.py  test_calibration.py  test_cli.py  test_gavagai_bridge.py  test_matryoshka.py  test_otcp.py  test_polytope.py  test_sinkhorn.py  test_types.py
