[project]
name = "polyalign"
version = "0.1.0a1"
description = "N-model M-architecture SAE alignment polytope: Sinkhorn-OT pairwise x Matryoshka prefix x OTCP split conformal coverage. Composes gavagai/recurrentlens/hybridlens/saelet/foldgauge/foldconsensus."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "hinanohart" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pot>=0.9.5",
    "typer>=0.12",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
saelens = ["sae-lens>=4.0"]
llama3 = ["transformers>=4.45"]
mamba = ["mamba-ssm>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.scripts]
polyalign-lint = "polyalign.cli:app"

[project.urls]
Homepage = "https://github.com/hinanohart/polyalign"
Repository = "https://github.com/hinanohart/polyalign"
Issues = "https://github.com/hinanohart/polyalign/issues"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/polyalign"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
